--- a/admin/.vscode/settings.json
+++ b/admin/.vscode/settings.json
@@ -1,3 +1,15 @@
 {
   "editor.formatOnSave": true,
+  "eslint.validate": [
+    "javascript",
+    "javascriptreact",
+    {
+      "language": "typescript",
+      "autoFix": true
+    },
+    {
+      "language": "typescriptreact",
+      "autoFix": true
+    }
+  ]
 }
