--- a/admin/package.json
+++ b/admin/package.json
@@ -10,7 +10,10 @@
     "@types/node": "^12.0.0",
     "@types/react": "^16.9.0",
     "@types/react-dom": "^16.9.0",
+    "prop-types": "^15.7.2",
+    "ra-data-json-server": "^3.1.2",
     "react": "^16.12.0",
+    "react-admin": "^3.1.2",
     "react-dom": "^16.12.0",
     "react-scripts": "3.3.0",
     "typescript": "~3.7.2"
