--- a/server/package.json
+++ b/server/package.json
@@ -14,6 +14,7 @@
     "start:prod": "node dist/main",
     "lint": "eslint '{src,test}/**/*.ts' --fix",
     "test": "jest",
+    "typeorm": "node ./node_modules/typeorm/cli.js",
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
