--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,6 @@
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
-TYPEORM_PORT=3306
-TYPEORM_USERNAME=user
-TYPEORM_PASSWORD=password
-TYPEORM_DATABASE=database-name
-TYPEORM_ENTITIES=dist/**/**.entity.js
-TYPEORM_SYNCHRONIZE=false
-TYPEORM_DROP_SCHEMA=false
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=password
+DB_DATABASE=database-name
