--- a/server/.env.test.example
+++ b/server/.env.test.example
@@ -1,9 +1,6 @@
-TYPEORM_CONNECTION=mysql
-TYPEORM_HOST=localhost
-TYPEORM_PORT=3306
-TYPEORM_USERNAME=root
-TYPEORM_PASSWORD=password
-TYPEORM_DATABASE=nestjs-starter-test
-TYPEORM_ENTITIES=dist/**/**.entity.js
-TYPEORM_SYNCHRONIZE=true
-TYPEORM_DROP_SCHEMA=true
+DB_CONNECTION=mysql
+DB_HOST=localhost
+DB_PORT=3306
+DB_USERNAME=root
+DB_PASSWORD=password
+DB_DATABASE=database-name-test
