Add PostModule and refactor typeorm connection.

--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,7 @@
-DB_CONNECTION=mysql
-DB_HOST=localhost
-DB_PORT=3306
-DB_USERNAME=root
-DB_PASSWORD=password
-DB_DATABASE=database-name
+TYPEORM_CONNECTION=mysql
+TYPEORM_HOST=localhost
+TYPEORM_USERNAME=root
+TYPEORM_PASSWORD=password
+TYPEORM_DATABASE=db-name
+TYPEORM_PORT=3306
+TYPEORM_ENTITIES=dist/**/**.entity.js
