--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@nestjs/common": "^7.0.7",
+    "@nestjs/config": "^0.4.0",
     "@nestjs/core": "^7.0.7",
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/passport": "^7.0.0",
