--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,10 @@
     "allowJs": true,
     "outDir": "./dist",
     "baseUrl": "./",
-    "incremental": true
+    "incremental": true,
+    "paths": {
+      "@/*": ["./src/*"]
+    }
   },
   "exclude": ["node_modules", "dist"]
 }
