--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "test:watch": "jest --watch",
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
-    "test:e2e": "jest --config ./test/jest-e2e.json",
+    "test:e2e": "jest --config ./test/jest-e2e.json --runInBand",
     "seed:config": "node -r tsconfig-paths/register -r ts-node/register ./node_modules/typeorm-seeding/dist/cli.js config",
     "seed:run": "node -r tsconfig-paths/register -r ts-node/register ./node_modules/typeorm-seeding/dist/cli.js seed"
   },
@@ -53,6 +53,7 @@
     "@types/express": "^4.17.2",
     "@types/faker": "^4.1.11",
     "@types/jest": "^24.0.25",
+    "@types/jest-json-schema": "^2.1.2",
     "@types/node": "^13.1.6",
     "@types/passport-jwt": "^3.0.3",
     "@types/passport-local": "^1.0.33",
@@ -63,6 +64,8 @@
     "eslint-config-prettier": "^6.7.0",
     "eslint-plugin-import": "^2.19.1",
     "jest": "^24.9.0",
+    "jest-extended": "^0.11.5",
+    "jest-json-schema": "^2.1.0",
     "prettier": "^1.18.2",
     "supertest": "^4.0.2",
     "ts-jest": "^24.3.0",
