--- a/package.json
+++ b/package.json
@@ -29,12 +29,13 @@
     "@nestjs/jwt": "^7.0.0",
     "@nestjs/passport": "^7.0.0",
     "@nestjs/platform-express": "^7.0.7",
-    "@nestjs/swagger": "^4.5.1",
+    "@nestjs/swagger": "^4.5.7",
     "@nestjs/typeorm": "^7.0.0",
     "@nestjsx/crud": "^4.4.2",
     "@nestjsx/crud-typeorm": "^4.4.2",
     "class-transformer": "^0.2.3",
     "class-validator": "^0.11.0",
+    "dayjs": "^1.8.27",
     "mysql": "^2.17.1",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
