--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "class-validator": "^0.11.0",
     "dayjs": "^1.8.27",
     "mysql": "^2.17.1",
+    "nestjs-typeorm-paginate": "^2.0.3",
     "passport": "^0.4.1",
     "passport-jwt": "^4.0.0",
     "passport-local": "^1.0.0",
